plugins {
    id "idea"
    id "maven-publish"
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
    id 'org.spongepowered.mixin' version '0.7.+'
    id "dev.vfyjxf.modaccessor" version "1.1"
}

def generatedResources = file("src/generated")

sourceSets {
    main {
        resources.srcDir generatedResources
    }
}
repositories {
    mavenCentral()
    mavenLocal()
    flatDir {
        dir "libs"
    }
    maven { url = "https://maven.parchmentmc.org" }
    maven { url = "https://maven.resourcefulbees.com/repository/maven-public/" }
    maven {
        // Location of the maven that hosts Team Resourceful's jars.
        name = "Resourceful Bees Maven"
        url = "https://nexus.resourcefulbees.com/repository/maven-public/"
    }

    maven {
        url = 'https://maven.gtceu.com'
        content {
            includeGroup 'com.gregtechceu.gtceu'
        }
    }
    maven {

        url "https://maven.firstdarkdev.xyz/snapshots/"
    }
    maven {
        url "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }
    maven { // Registrate
        url = "https://maven.tterrag.com/"
        content {
            // need to be specific here due to version overlaps
            includeGroup "com.tterrag.registrate"
        }
    }
    maven {
        // Patchouli, JEI
        name = "BlameJared"
        url = "https://maven.blamejared.com/"
    }
    maven {
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        // Curse Forge File
        url "https://cursemaven.com/"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        // EMI
		name = "TerraformersMC"
		url = "https://maven.terraformersmc.com/"
	}
    maven {
        url = "https://repo1.maven.org/maven2/io/github/llamalad7/"
        content {
            includeGroup "com.github.llamalad7"
        }
    }
    maven {
        url = "https://maven.createmod.net"
    }
    maven {
        url = "https://maven.architectury.dev"
    }
    /*maven {
        url = "https://thedarkcolour.github.io/KotlinForForge/"
    }*/
    maven {
        name "Modmaven"
        url "https://modmaven.dev/"
        // For Gradle 5.1 and above, limit it to just AE2
        content {
            includeGroup 'appeng'
        }
    }
    maven {
        name = 'GuideME Snapshots'
        url = 'https://central.sonatype.com/repository/maven-snapshots/'
        content {
            includeModule('org.appliedenergistics', 'guideme')
        }
    }
    maven {
        url "https://maven.ftb.dev/releases"
        content {
            includeGroup "dev.ftb.mods"
        }
    }

    maven {
        url "https://maven.ftb.dev/snapshots"
        content {
            includeGroup "dev.ftb.mods"
        }
    }
}
version = mod_version
group = maven_group
base { archivesName = archives_base_name }
java { sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17 }
sourceSets.main.resources { srcDir 'src/generated/resources' }

modAccessor {
    createTransformConfiguration(configurations.compileOnly)
    accessTransformerFiles = project.files('src/main/resources/META-INF/accesstransformer.cfg')
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true
    accessTransformer = project.files('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods { "${mod_id}" { source sourceSets.main } }
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
        }
        client { property 'forge.enabledGameTestNamespaces', mod_id }
        server { property 'forge.enabledGameTestNamespaces', mod_id; args '--nogui' }
        data {
            // example of overriding the workingDirectory set in configureEach above
            workingDirectory project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
            args '--existing-mod', 'gtceu'
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    // JEI, EMI, Jade
    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
    implementation fg.deobf("dev.emi:emi-forge:${emi_version}+${minecraft_version}")
    implementation fg.deobf("curse.maven:jade-324717:5390389")

    // GregTech and dependencies
    implementation fg.deobf("com.gregtechceu.gtceu:gtceu-${project.minecraft_version}:${project.gtceu_version}:slim") {transitive = false}
    implementation fg.deobf("com.lowdragmc.ldlib:ldlib-forge-${minecraft_version}:${ldlib_version}") {transitive = false}
    implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
    //compileOnly fg.deobf("com.gregtechceu.gtceu:gtceu-${project.minecraft_version}:${project.gtceu_version}:slim") {transitive = false}
    //compileOnly fg.deobf("com.lowdragmc.ldlib:ldlib-forge-${minecraft_version}:${ldlib_version}") {transitive = false}
    implementation fg.deobf("dev.latvian.mods:kubejs-forge:${kubejs_version}")
    implementation fg.deobf("dev.latvian.mods:rhino-forge:${rhino_version}")
    implementation fg.deobf("earth.terrarium.adastra:ad_astra-forge-${minecraft_version}:${ad_astra_version}")
    implementation fg.deobf("com.teamresourceful.resourcefullib:resourcefullib-forge-${minecraft_version}:2.1.29")
    runtimeOnly fg.deobf("com.teamresourceful.resourcefulconfig:resourcefulconfig-forge-${minecraft_version}:2.1.3")
    runtimeOnly fg.deobf("earth.terrarium.botarium:botarium-forge-${project.minecraft_version}:${project.botarium_version}")
    implementation(fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false })
    implementation(fg.deobf("net.createmod.ponder:Ponder-Forge-${minecraft_version}:${ponder_version}"))
//    compileOnly(fg.deobf("dev.engine-room.flywheel:flywheel-forge-api-${minecraft_version}:${flywheel_version}"))
    runtimeOnly(fg.deobf("dev.engine-room.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}"))
    implementation fg.deobf("dev.toma.configuration:configuration-forge-${minecraft_version}:${configuration_version}")
    runtimeOnly fg.deobf("dev.architectury:architectury-forge:${architectury_version}")
    implementation fg.deobf("appeng:appliedenergistics2-forge:${ae2_version}")
    compileOnly fg.deobf('dev:gtmthings:1.5.4')
    implementation fg.deobf('dev:gtmoldraw:3.0.1')
    runtimeOnly fg.deobf('dev:jecharacters:1.20.1-forge-4.6.3')
    runtimeOnly fg.deobf('org.appliedenergistics:guideme:20.1.14')
//    implementation fg.deobf("dev.ftb.mods:ftb-xmod-compat-forge:2.1.3-SNAPSHOT")
    compileOnly fg.deobf("dev.ftb.mods:ftb-quests-forge:2001.4.17")
    compileOnly fg.deobf("dev.ftb.mods:ftb-teams-forge:2001.3.1")
    compileOnly fg.deobf("dev.ftb.mods:ftb-library-forge:2001.2.12")
//    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.0"))
//    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.0")) {
//        jarJar.ranged(it, "[0.5.0,)")
//    }

    accessCompileOnly(fg.deobf('dev:gtmthings:1.5.4'))
    accessCompileOnly(fg.deobf('dev:gtmoldraw:3.0.1'))

    // lombok
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    //mixin
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

mixin {
    // MixinGradle Settings
    add sourceSets.main, 'gttcore.mixins.refmap.json'
    config 'gttcore.mixins.json'
}

tasks.named('processResources', ProcessResources).configure {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    var properties = [
            "mod_license": mod_license,
            "mod_id": mod_id,
            "version": version,
            "mod_name": mod_name,
            "mod_url": mod_url,
            "mod_author": mod_author,
            "forge_version": forge_version.split("\\.")[0], // only specify major version of forge
            "minecraft_version": minecraft_version,
            "gtceu_version": gtceu_version,
            "ad_astra_version": ad_astra_version,
            "create_version": create_version
    ]
    inputs.properties(properties)
    exclude("multiblocks.txt")
    exclude("main/data/gttcore/recipes/**")

    filesMatching("META-INF/mods.toml") {
        expand properties + [project: project]
    }
}

tasks.named('jar', Jar).configure { finalizedBy 'reobfJar' }
tasks.withType(JavaCompile).configureEach {
    // ensure that the encoding is set to UTF-8, no matter what the system default is
    // this fixes some edge cases with special characters not displaying correctly
    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
    // If Javadoc is generated, this must be specified in that task too.
    options.encoding = "UTF-8"
    options.release.set(17)
}

//The executeGame.bat and copyJar.bat was hidden
tasks.register('runModpack') {
    dependsOn copyJar
    doLast {
        exec {
            commandLine "executeGame.bat", "${mod_id}-${mod_version}.jar"
        }
    }
}

tasks.register('copyJar') {
    dependsOn build
    doLast {
        exec {
            commandLine "copyJar.bat", "${mod_id}-${mod_version}.jar"
        }
    }
}